; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_lnewproto.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_lsproto.c_lnewproto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lnewproto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lnewproto(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.sproto*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @luaL_checklstring(i32* %7, i32 1, i64* %5)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call %struct.sproto* @sproto_create(i8* %10, i64 %11)
  store %struct.sproto* %12, %struct.sproto** %4, align 8
  %13 = load %struct.sproto*, %struct.sproto** %4, align 8
  %14 = icmp ne %struct.sproto* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = load %struct.sproto*, %struct.sproto** %4, align 8
  %18 = call i32 @lua_pushlightuserdata(i32* %16, %struct.sproto* %17)
  store i32 1, i32* %2, align 4
  br label %20

19:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %15
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local %struct.sproto* @sproto_create(i8*, i64) #1

declare dso_local i32 @lua_pushlightuserdata(i32*, %struct.sproto*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
